# gunaha

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
.github/workflow/: test-and-publish.yml
.github/workflows/: test-and-publish.yml
apps/gunaha/: __init__.py  admin.py  apps.py  import_dictionary.py  import_recordings.py  models.py  orthography.py  urls.py  views.py
apps/gunaha/management/commands/: downloaddictionary.py  importdictionary.py  importrecordings.py
apps/gunaha/migrations/: 0001_initial.py  0002_auto_20201130_1452.py
apps/gunaha/static/gunaha/css/: styles.css
apps/gunaha/templates/gunaha/: base.html  index.html
apps/gunaha/templates/gunaha/includes/: intro.html  pagination-controls.html  play-recording.html  search-result.html
apps/gunaha/templates/gunaha/pages/: about.html
apps/gunaha/tests/: test_models.py  test_search.py
apps/morphodict/: __init__.py  admin.py  apps.py  context_processors.py  errors.py  managers.py  models.py  search.py  search_indexes.py  util.py
apps/morphodict/constants/: __init__.py
apps/morphodict/migrations/: 0001_initial.py  0002_auto_20200526_1730.py
apps/morphodict/shared/: __init__.py
apps/morphodict/templates/search/: search.html
apps/morphodict/templates/search/indexes/morphodict/: head_text.txt
apps/morphodict/utils/: __init__.py  fst_analysis_parser.py
apps/wim/: apps.py
gunaha/: settings.py  urls.py  wsgi.py
gunahasite/: settings.py  urls.py  wsgi.py
itwewina/CreeDictionary/DatabaseManager/: xml_entry_lemma_finder.py
run/: .gitignore
