[tool.poetry]
name = "gunaha"
version = "0.1.0.alpha0"
description = "Tsuut'ina dictionary"
authors = ["Eddie Antonio Santos <easantos@ualberta.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=2.2,<3"
typing-extensions = "^3.7.4"
attrs = "^19.3.0"
django-js-reverse = "^0.9.1"
sortedcontainers = {url = "https://eddieantonio.keybase.pub/sortedcontainers-2.1.0.tar.gz"}
marisa-trie = "^0.7.5"
environs = "^8.0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.2"
pytest-django = "^3.9.0"
pytest-cov = "^2.9.0"
pytest-datadir = "^1.3.1"
pytest-mypy = "^0.6.2"
codecov = "^2.1.3"
gitdir = "^1.2.2"
tqdm = "^4.46.0"
python-levenshtein = "^0.12.0"
django-debug-toolbar = "^2.2"
django-stubs = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
